---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2025-05-02
  Changes:
    - The Broken quality is no longer hidden. Broken items are now instead generally nonfunctional: Broken entities and tiles are destroyed when placed, broken equipment cannot be inserted into grids, etc.
    - Handcrafting with intermediates is no longer prevented! Multi-step handcrafting experiences extra degradation on the final product.
---------------------------------------------------------------------------------------------------
Version: 0.5.7
Date: 2025-04-27
  Changes:
    - Renamed 'Downgrader port' to 'Downgrade port'.
---------------------------------------------------------------------------------------------------
Version: 0.5.6
Date: 2025-04-25
  Changes:
    - Tweaks to burner assembling machine stats.
    - Better compatibility with modded reactors.
---------------------------------------------------------------------------------------------------
Version: 0.5.5
Date: 2025-04-25
  Changes:
    - Compatibility with mods that introduce loops in recycling recipes.
---------------------------------------------------------------------------------------------------
Version: 0.5.4
Date: 2025-04-25
  Info:
    - Description updated.
---------------------------------------------------------------------------------------------------
Version: 0.5.3
Date: 2025-04-25
  Changes:
    - Degradation chance increased from 60% to two thirds.
    - Quality unlocks for uncommon, rare etc no longer appear in the tech tree.
---------------------------------------------------------------------------------------------------
Version: 0.5.0
Date: 2025-04-12
  Info:
    - This is a breaking update, previous saves are not compatible.
  Changes:
    - Quality is no longer renamed to 'degradation'.